bug fixes for data replication